[gd_scene load_steps=2 format=3 uid="uid://dv7ndu5dc7rex"]

[ext_resource type="Script" path="res://Scripts/UI/Lobby/Network/server_creator.gd" id="1_5bd3v"]

[node name="ServerCreator" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("1_5bd3v")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="ServerName" type="VBoxContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/VBoxContainer/ServerName"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Host Login (name of player)"

[node name="LineEdit" type="LineEdit" parent="MainContainer/VBoxContainer/ServerName"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 0
text = "Zdzichu Server"

[node name="BindingOptions" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="IPAddress" type="VBoxContainer" parent="MainContainer/VBoxContainer/BindingOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MainContainer/VBoxContainer/BindingOptions/IPAddress"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "LOCAL ip address"

[node name="LineEdit" type="LineEdit" parent="MainContainer/VBoxContainer/BindingOptions/IPAddress"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 0
text = "127.0.0.1"
placeholder_text = "type 0.0.0.0 here if you don't know what to type here"

[node name="Port" type="VBoxContainer" parent="MainContainer/VBoxContainer/BindingOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MainContainer/VBoxContainer/BindingOptions/Port"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "LOCAL Port"

[node name="LineEdit" type="LineEdit" parent="MainContainer/VBoxContainer/BindingOptions/Port"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 0
text = "12000"

[node name="Separator" type="Control" parent="MainContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonListen" type="Button" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "START SERVER"

[node name="RichTextLabel" type="RichTextLabel" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "BASIC SERVER SETUP INSTRUCTIONS

[color=red]WARNING[/color] Server listens on [b]your LOCAL ip and port[/b] - it usually not visible on the internet, unless youre in the same LAN etc.

Usually clients need to know your EXTERNAL address and port to connect via internet.

Depending on your internet provider you may not even have a reliable EXTERNAL IP, read about NAT (network address translation)

When server is running Clients usually need to know your EXTERNAL IP to connect to you. There is a button to check external address when server is running. This is the IP adress of your router visible form the internet.

Similarly you need EXTERNAL PORT - usually there is a PORT FORWARDNIG setup on your router. But usually port is the same as your local port. 
Router needs to be set up properly to allow forwarding connections to your machine. Forwarding may change port.

ALTERNATIVES
No port forwarding or ip translation is needed in local networks. Clients in LAN  (local area network) can connect with your local info. External might not even work in a LAN.

It is easier to play with people on the same LAN or wifi.

There are services like HAMACHI that create virtual LAN networks. You can try setting them up to play via internet even if you cant host a normal server. By creating a virtual LAN over internet.

[i]IP address[/i]
LOCAL IP on your computer for network card that is conected to the local network
It is needed for server to know what network card to use
 - localhost (127.0.0.1) is only for testing on the same machine, it is not exposed
 - broadcast (0.0.0.0) sends to all ips on the machine, simple but not always works
 - check your ip in 'ipconfig' or similar tool if broadcast 0.0.0.0 doesn't work
 - check your router EXTERNAL ip and config to make sure people can connect to the sderver via internet and your router

[i]Port[/i]
Your local port, make sure router you are using has proper port forwarding for access via internet
"
fit_content = true
scroll_active = false

[connection signal="pressed" from="MainContainer/VBoxContainer/ButtonListen" to="." method="_on_button_listen_pressed"]
